# SynthEdit-sems

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.htm  MIDIChanGate.sem  README.md  SeparateChannels.cpp  SeparateChannels.sem  SeparateChannelsGtr.sem  Solo-Mute_8 channels_link.rtf  plugin_helper.cmake
ANDGate/: ANDGate.cpp  ANDGate.rc  ANDGate.xml  CMakeLists.txt
AnimPosToColorHex/: AnimPosToColorHex.rc  AnimPosToColorHex.xml  AnimPosToHexGui.cpp  CMakeLists.txt
AnimPosToHex/: AnimPosToHex.rc  AnimPosToHex.xml  AnimPosToHexGui.cpp  CMakeLists.txt
AutoFixedValues/: AutoFixedValues.cpp  AutoFixedValues.rc  AutoFixedValues.xml  CMakeLists.txt
AutoFixedValuesInt/: AutoFixedValuesInt.cpp  AutoFixedValuesInt.rc  AutoFixedValuesInt.xml  CMakeLists.txt
BoolAND/: BoolAND.cpp  BoolAND.rc  BoolAND.xml  CMakeLists.txt
BoolCounter/: BoolCounter.rc  BoolCounter.xml  BoolCounterGui.cpp  CMakeLists.txt
BoolTriggerGui/: BoolTriggerGui.rc  BoolTriggerGui.xml  BoolTriggerGuiGui.cpp  CMakeLists.txt
BooleanAND/: BooleanAND.rc  BooleanAND.xml  BooleanANDGui.cpp  CMakeLists.txt
BooleanNOT/: BooleanNOT.xml  BooleanNOTGui.cpp
BooleanNot/: BooleanNOT.rc  CMakeLists.txt
BooleanOR/: BooleanOR.rc  BooleanOR.xml  BooleanORGui.cpp  CMakeLists.txt
Brightness/: Brightness.rc  Brightness.xml  BrightnessGui.cpp  CMakeLists.txt
Button/: Button.cpp  Button.rc  Button.xml  ButtonGui.cpp  CMakeLists.txt  unicode_conversion.h
CC2Note/: CC2Note.cpp  CC2Note.rc  CC2Note.xml  CMakeLists.txt
CheckingStringOnMac/: CMakeLists.txt  CheckingStringOnMac.xml  CheckingStringOnMacGui.cpp
ColorKnob/: CMakeLists.txt  ColorKnob.cpp  ColorKnob.htm  ColorKnob.rc  ColorKnob.xml  ColorKnobGui.cpp
ConcatGui/: CMakeLists.txt  ConcatGuiGui.cpp
CreateTextFile/: CMakeLists.txt  CreateTextFile.rc  CreateTextFile.xml  CreateTextFileGui.cpp
DH_Array/: CMakeLists.txt  DH_Array.cpp  DH_Array.rc  DH_Array.xml
DH_ControlTrigger/: CMakeLists.txt  DH_ControlTrigger.cpp  DH_ControlTrigger.rc  DH_ControlTrigger.xml  DH_ControlTriggerGui.cpp
DSP_SoloMute8/: CMakeLists.txt  DSP_SoloMute8.cpp  DSP_SoloMute8.rc  DSP_SoloMute8.xml  DSP_SoloMute8Gui.cpp
Degree/: CMakeLists.txt  Modulus.cpp  Modulus.rc  Modulus.xml
DeleteDoubles/: CMakeLists.txt  DeleteDoubles.cpp  DeleteDoubles.rc  DeleteDoubles.xml
DisplayFret/: CMakeLists.txt  DisplayFret.cpp  DisplayFret.rc  DisplayFret.xml  DisplayFretGui.cpp
DisplayKnob/: DisplayKnob.htm
DisplayKnob_old/: CMakeLists.txt  DisplayKnob.cpp  DisplayKnob.htm  DisplayKnob.rc  DisplayKnob.xml  DisplayKnobGui.cpp  Readme.txt
DisplayList/: CMakeLists.txt  DisplayList.cpp  DisplayList.rc  DisplayList.xml  DisplayListGui.cpp
DisplayList2/: CMakeLists.txt  DisplayList2.cpp  DisplayList2.rc  DisplayList2.xml
DisplayText/: CMakeLists.txt  DisplayText.rc  DisplayText.xml  DisplayTextGui.cpp
DisplayTextX/: CMakeLists.txt  DisplayTextX.rc  DisplayTextX.xml  DisplayTextXGui.cpp  unicode_conversion.h
DoubleClick/: CMakeLists.txt  DoubleClick.rc  DoubleClick.xml  DoubleClickGui.cpp
DrumTrigger/: CMakeLists.txt  DrumTrigger.cpp  DrumTrigger.rc  DrumTrigger.xml
ExKnob/: CMakeLists.txt  ExKnob.rc  ExKnob.xml  ExKnobGui.cpp
FileDialog/: CMakeLists.txt  FileDialog.xml  FileDialogGui.cpp  FileDialogGui.h
FileDialogEx/: CMakeLists.txt  FileDialogEx.rc  FileDialogEx.xml  FileDialogExGui.cpp  FileDialogExGui.h
FileDialogX/: FileDialog.rc
FileDialog_bkp/: FileDialogGui.cpp  FileDialogGui.h
FileName/: CMakeLists.txt  FileName.rc  FileName.xml  FileNameGui.cpp
FilePath/: CMakeLists.txt  FilePath.rc  FilePath.xml  FilePathGui.mm
FilesFilter/: CMakeLists.txt  FilesFilter.rc  FilesFilter.xml  FilesFilterGui.cpp
Float2FloatGui/: CMakeLists.txt  Float2FloatGui.cpp  Float2FloatGui.rc  Float2FloatGui.xml  Float2FloatGuiGui.cpp
FloatAdd/: CMakeLists.txt  FloatAdd.cpp  FloatAdd.rc  FloatAdd.xml
FloatAnimation/: CMakeLists.txt  FloatAnimation.rc  FloatAnimation.xml  FloatAnimationGui.cpp
FloatArray/: CMakeLists.txt  FloatArray.cpp  FloatArray.rc  FloatArray.xml
FloatClipper/: CMakeLists.txt  FloatClipper.rc  FloatClipper.xml  FloatClipperGui.cpp
FloatCompare/: CMakeLists.txt  FloatCompare.rc  FloatCompare.xml  FloatCompareGui.cpp
FloatEntry/: CMakeLists.txt  FloatEntry.rc  FloatEntry.xml  FloatEntryGui.cpp  FloatEntryGui.h
FloatGui2Float/: CMakeLists.txt  FloatGui2Float.cpp  FloatGui2Float.rc  FloatGui2Float.xml  FloatGui2FloatGui.cpp
FloatHold/: CMakeLists.txt  FloatHold.cpp  FloatHold.rc  FloatHold.xml
FloatLink/: CMakeLists.txt  FloatLink.rc  FloatLink.xml  FloatLinkGui.cpp
FloatModulus/: CMakeLists.txt  FloatModulus.rc  FloatModulus.xml  FloatModulusGui.cpp
FloatMultiply/: CMakeLists.txt  FloatMultiply.rc  FloatMultiply.xml  FloatMultiplyGui.cpp
FloatMultiply_LR/: CMakeLists.txt  FloatMultiply_LR.cpp  FloatMultiply_LR.rc  FloatMultiply_LR.xml
FloatRedirect/: CMakeLists.txt  FloatRedirect.cpp  FloatRedirect.rc  FloatRedirect.xml
FloatSubtract/: CMakeLists.txt  FloatSubtract.cpp  FloatSubtract.rc  FloatSubtract.xml
FloatToHex/: CMakeLists.txt  FloatToHex.rc  FloatToHex.xml  FloatToHexGui.cpp  RCa22180
FloatTrigger/: CMakeLists.txt  FloatTrigger.rc  FloatTrigger.xml  FloatTriggerGui.cpp
FolderList/: CheckingStringOnMac.rc  CheckingStringOnMac.xml  CheckingStringOnMacGui.cpp  FolderList.xml  FolderListGui.cpp
FolderList_0.1/: CMakeLists.txt  FolderList.rc  FolderList.xml  FolderListGui.cpp
FretFormula/: CMakeLists.txt  FretFormula.rc  FretFormula.xml  FretFormulaGui.cpp
FretLed/: CMakeLists.txt  FretLed.cpp  FretLed.rc  FretLed.xml  FretLedGui.cpp
FretLedX/: CMakeLists.txt  FretLedX.cpp  FretLedX.rc  FretLedX.xml  FretLedXGui.cpp
FretboardX/: CMakeLists.txt  FretboardX.rc  FretboardX.xml  FretboardXGui.cpp
GUIBoolGateVolts/: CMakeLists.txt  GUIBoolGateVolts.cpp  GUIBoolGateVolts.rc  GUIBoolGateVolts.xml  GUIBoolGateVoltsGui.cpp
GUI_SoloMute8/: CMakeLists.txt  GUI_SoloMute8.rc  GUI_SoloMute8.xml  GUI_SoloMute8Gui.cpp
LED/: LED.rc  (+4 more)
TestingFilesystem/: CMakeLists.txt  TestingFilesystem.rc  TestingFilesystem.xml  TestingFilesystemGui.cpp
(+664 files in other folders)
